app/assets/stylesheets/atlas-map.scss
* {
 font-size: 100%;
 font-family: Arial;
 font-family: 'Montserrat', sans-serif;
}

input:focus,
select:focus,
textarea:focus,
button:focus {
    outline: none;
}

.ui-dialog {
    left: 0;
    outline: 0 none;
    padding: 0 !important;
    position: absolute;
    top: 0;
    background-image: url("https://download.unsplash.com/30/green-mountain.jpg");
    background-repeat: no-repeat;
    background-size: 100% 100%;
    text-align: center;
    border: none;
    border-radius: 20px;
}

.modal-logo {
  width: 50%;
  margin-top: 10%;
  -webkit-filter: drop-shadow(3px 3px 10px #222);
  filter:         drop-shadow(3px 3px 10px #222);
}

.ui-dialog-content p {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  font-size: 2.5em;
  position: relative;
  color: white;
  text-shadow: 3px 3px 10px #222;
}

.ui-widget-content {
  box-shadow: 0px 0px 50px 300px rgba(0, 0, 0, 0.5);
}

.ui-dialog-titlebar {
  display: none;
}

.ui-widget button {
  font-size: 1.5em;
  font-family: 'Montserrat', sans-serif;
}

.modal-close-button {
  width: 400px;
  height: 100px;
  border:2px solid #1195ee;
  border-radius: 15px;
  background-color:#1195ee;
  color: white;
  margin: 40px;
}

.modal-close-button:hover {
  -webkit-filter: drop-shadow(3px 3px 10px #222);
  filter:         drop-shadow(3px 3px 10px #222);
}

.ui-widget-overlay.ui-front {
  background: none;
}


.atlas-map {
  height: 100%;
  width: 100%;
  position:absolute;
}

.jvectormap-marker {
  width: 5;
  height: 5;
}
.color-filter {
  margin: 5px;
}

.destinations-div {
  overflow: hidden;
  text-align: center;
}

.destinations-div ul {
  margin: 40px;
  margin-top: 0px;
  padding: 0;
}

.destinations-div h4 {
  margin-bottom: 0px;
}

.destinations-div p {
  margin: 0px;
}

.info-div h4 {
  margin-bottom: 0px;
}

.info-div p {
  margin: 0px;
}

.country-destinations {
  display: none;
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  height:100%;
  width:30%;
  position:absolute;
  right: -2000px;
  background-color: white;
  z-index: 2;
  box-shadow: -2px 0px 100px black;
  margin: 0px;
  overflow-y:auto;
  opacity: 0.95;
}

.country-info {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  height:100%;
  width:30%;
  position:absolute;
  left: -2000px;
  background-color: white;
  z-index: 2;
  box-shadow: -2px 0px 100px black;
  margin: 0px;
  overflow-y:auto;
  opacity: 0.95;
}

.info-div {
  // margin: 40px;
}

.travel-info {
  padding: 40px;
  padding-top: 5px;
}

.country-partial {
  padding: 1em;
}

.flag {
  display: inline-block;
  width: 200px;
  padding:1px;
  border:1px solid #021a40;
  background-color:#f8fff6;
}

.country-info h2 {
  margin: 0;
}

.country-info h4 {
  margin-bottom: 0;
}

.country-info p {
  margin-top: 0;
}

.navbar {
  box-shadow: -2px 0px 20px gray;
  position: absolute;
  width: 100%;
  height: 60px;
  z-index: 1;
  background-color: white;
}

.logo {
  padding: 10px;
  display: inline-block;
  vertical-align: middle;
  width: 200px;
}

.github-logo {
  position: absolute;
  width: 50px;
  z-index: 1;
  margin: 20px;
  bottom: 0;
  right: 0;
}

.github-logo:hover {
  opacity: .5;
}

.home-background {
  width: 100%;
}

.slide {
  position: absolute;
  z-index: 1;
  bottom: 0px;
  left: 10px;
}

.slide .inner {
  opacity: .9;
  position: relative;
  left: 0;
  bottom: 0;
  padding: 10px;
  background-color:#e4e4e4;
  border-radius: 0px 5px 0px 0px;
  display: none;
}

.filter-slide-button {
  opacity: .9;
  padding: 10px;
  border:2px solid #e4e4e4;
  border-radius: 8px 8px 0px 0px;
  background-color:#e4e4e4;
  color:#1195ee;
  font-size: 1em;
}

.inner button {
  border:2px solid #1195ee;
  border-radius: 5px;
  background-color:#fafafa;
  color:#1195ee;
  font-size: 1em;
}

.language-filter {
  margin: 5px;
}

.alert-icon {
  width: 100px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.visa-filter {
  margin: 5px;
}

.gdp-filter {
  margin: 5px;
}

.search-bar {
  position: absolute;
  top: 15px;
  right: 15px;
  z-index: 1;
  margin: auto;
}

.search {
  padding:8px 15px;
  background:#dbdbdb;
  border:0px solid #dbdbdb;
  border-radius: 5px;
}

.search-button {
  position:relative;
  padding:6px 15px;
  left:-8px;
  border:2px solid #1195ee;
  border-radius: 5px;
  background-color:#fafafa;
  color:#1195ee;
}


.ui-autocomplete {
  max-height: 200px;
  border-radius: 5px;
  overflow-y: auto;
  overflow-x: hidden;
}

.small-logo {
  position: relative;
  width: 200px;
}

.no-destinations {
  margin: 40px;
}

.country-image {
  // max-height: 500px;
  width: 100%;
  min-height: 300px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.image-container {
    width: 100%;
    max-height: 400px;
    overflow: hidden;
}
.container img {
    width: 100%;
}

.image-carousel {
  // background-image: url("http://www.arabianbusiness.com/skins/ab.main/gfx/loading_spinner.gif");
  height: 300px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  overflow: hidden;
}

.img-desc {
  align: center;
}

.centered-flag-and-info {
  margin: auto;
  padding-top: 15px;
}

.flag-and-name {
  text-align: center;
  min-height: 300px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  background-color: #c9e3ff;
}

.flag-and-name h1{
  margin: 0;
  margin-bottom: 10px;
}


li {
  list-style-type: none;
}

h3 {
  text-align: center;
}

h2.img-desc {
    position: absolute;
    top: 5%;
    color: #FFF;
    word-wrap: break-word;
    width: 80%;
    padding-left: 40px;
    text-shadow: 2px 2px 5px #333;
}

